--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       color:#C6C6C6;
       padding: 20px;
       text-shadow: 0 0 black;
+      text-align: left'
     }
     .card {
       background-color: white;
